// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList is rendered 1`] = `
<dl
  aria-label="aria-label"
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal testClass1 testClass2 emotion-euiDescriptionList-left"
  data-test-subj="test subject string"
>
  Content
</dl>
`;

exports[`EuiDescriptionList props align center is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--center euiDescriptionList--normal emotion-euiDescriptionList-center"
/>
`;

exports[`EuiDescriptionList props align left is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
/>
`;

exports[`EuiDescriptionList props compressed is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal euiDescriptionList--compressed emotion-euiDescriptionList-left"
/>
`;

exports[`EuiDescriptionList props listItems descriptionProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    Title 1
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    Description 1
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-normal-row"
    data-type="row"
  >
    Title 3
  </dt>
  <dd
    aria-label="aria-label"
    class="euiDescriptionList__description testClass1 testClass2 emotion-euiDescriptionList__description-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props listItems titleProps is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    Title 1
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    Description 1
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    <em>
      Title 2
    </em>
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    <code>
      Description 2
    </code>
  </dd>
  <dt
    aria-label="aria-label"
    class="euiDescriptionList__title testClass1 testClass2 emotion-euiDescriptionList__title-normal-row"
    data-test-subj="test subject string"
    data-type="row"
  >
    Title 3
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-normal-row"
    data-type="row"
  >
    Description 3
  </dd>
</dl>
`;

exports[`EuiDescriptionList props type column is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--column euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left-column"
/>
`;

exports[`EuiDescriptionList props type inline is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--inline euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
/>
`;

exports[`EuiDescriptionList props type responsiveColumn is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--responsiveColumn euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left-column"
/>
`;

exports[`EuiDescriptionList props type row is rendered 1`] = `
<dl
  class="euiDescriptionList euiDescriptionList--row euiDescriptionList--left euiDescriptionList--normal emotion-euiDescriptionList-left"
/>
`;
